deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx 
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    resources: {}
  restartPolicy: Always
