service.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx
spec:
 selector:
   app: nginx
 ports:
 - port: 80
   protocol: TCP
   targetPort: 80
 type: ClusterIP
