ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx
 annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /$2
   nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
 ingressClassName: nginx
 rules:
 - host: mastering.devops
   http:
     paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: nginx
             port:
               number: 80
