manifest-test-gateway-api.yaml
# ---
# Can install via CRDs
# apiVersion: gateway.networking.k8s.io/v1
# kind: GatewayClass
# metadata:
#   name: nginx
# spec:
#   controllerName: gateway.nginx.org/nginx-gateway-fabric
# ---
# --------------- Gateway -----------------
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: k8s-demo
spec:
  gatewayClassName: nginx-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: k8s.dojo
---
# --------------- HTTPRoute -----------------
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: k8s-demo
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: k8s-demo
  hostnames:
    - k8s.dojo
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: healthcheck-rust-svc
          port: 80
---
# --------------- Service -----------------
apiVersion: v1
kind: Service
metadata:
  name: healthcheck-rust-svc
  namespace: k8s-demo
spec:
  selector:
    app: healthcheck-rust-dpm
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
---
# --------------- Deployment -----------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-rust-dpm
  namespace: k8s-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: healthcheck-rust-dpm
  template:
    metadata:
      labels:
        app: healthcheck-rust-dpm
    spec:
      containers:
        - image: iyudesu/rust_image:v1.1.0
          name: healthcheck-rust-app
          ports:
            - containerPort: 8080
          resources: {}
